--- a/resume.html
+++ b/resume.html
@@ -11,8 +11,8 @@
   <header>
     <h1>Hong Ying</h1>
     <address>6001 Southwest 70th Street, South Miami, FL33143
-    <br>&#9742;Cellphone: (786) 351-8936
-    <br><strong>&#9993;</strong><a href=:"mailto:elaineying9106@gmail.com">Email: elaineying9106@gmail.com</a>
+    <br/>&#9742;Cellphone: (786) 351-8936
+    <br/><strong>&#9993;</strong><a href="mailto:elaineying9106@gmail.com">elaineying9106@gmail.com</a>
     </address>
     </header>
 
@@ -62,12 +62,7 @@
           <ul><li>Responsible for organizing annual world cultural festival</li>
             <li>Invited local business leaders to hold employment seminars on campus</li></ul>
             <p><strong>Sep. 2010---Jun. 2011 Member of the department level student union</strong></p>
-            <li>Initiated literature club to tutor local middle school students</li></ul>
-          </article>
-        </section>
-
-         <section>
-           <article>
+            <ul><li>Initiated literature club to tutor local middle school students</li></ul>
            <p><strong>Second Class Scholarship</strong> for two academic semesters since 2009</p>
              <p><strong>Third Class Scholarship</strong> for four academic semesters since 2009</p>
              <p><strong>Outstanding Youth League Member</strong>	</p>
