--- a/resume.html
+++ b/resume.html
@@ -2,80 +2,105 @@
 <html>
 <head>
 <meta charset="UTF-8"/>
+<link href="css/web.css"rel="stylesheet" media="screen"/>
+<link href="css/print.css"rel="stylesheet"media="print"/>
 <title>HONG YING</title>
 </head>
 
 
 <body>
+  <div id="box">
 
   <header>
     <h1>Hong Ying</h1>
-    <address>6001 Southwest 70th Street, South Miami, FL33143
-    <br/>&#9742;Cellphone: (786) 351-8936
-    <br/><strong>&#9993;</strong><a href="mailto:elaineying9106@gmail.com">elaineying9106@gmail.com</a>
+    <address>6001 Southwest 70th Street,
+      <br>South Miami, FL33143
+    <br>&#9742;Phone: (786) 351-8936
+    <br><strong>&#9993;</strong>Email:<a href="mailto:elaineying9106@gmail.com">elaineying9106@gmail.com</a>
     </address>
-    </header>
+    <p><a href="https://www.linkedin.com/profile/view?id=288228069&trk=nav_responsive_tab_profile_pic">Hong Ying's Profile</a></p>
+    <img src="img/IMG_1054.JPG">
+</header>
 
-<nav>
+<div class="nav">
   <ul>
-    <li><a href="#education">Education</a></li>
     <li><a href="#media-experience">Media Experience</a></li>
-    <li><a href="#awards-and-activities">Awards and Activities</a></li>
+    <li><a href="#proficiencies">Proficiencies</a></li>
+    <li><a href="#education">Education</a></li>
   </ul>
-</nav>
+</div>
+
 
 <main>
-
-  <section id="education">
-    <h2>Education</h2>
-    <article>
-      <ul>
-      <li><strong>Aug. 2013---Present</strong> Master’s degree in Journalism, University of Miami</li>
-    <li><strong>Sept. 2009---July. 2013</strong>	Bachelor’s degree in Chinese Linguistics and Literature, Shanxi University</li>
-    </ul>
-    </article>
-  </section>
-
-
-  <section id="media-experience">
+  <div id="content">
+ <section id="media-experience">
     <h2>Media Experience</h2>
     <article>
-      <p><strong>May. 2014---Aug.2014</strong>  One Degree Deeper News, Zhejiang Radio and TV Center, Hangzhou, China</p>
-        <ul><li>News reporter doing interviews, shooting videos, writing and taking part in producing</li></ul>
-        <p><strong>Aug. 2013---Present</strong>  NewsVision, University of Miami TV, Coral Gables, Florida</p>
+      <h3>Broadcast Journalist Intern</h3>
+      <p><time>May 2014-Aug 2014</time></p>
+      <p>One Degree Deeper News</p>
+      <p><span><a href="http://www.zjstv.com/">Zhejiang Radio and TV Center</a></span></p>
+      <p>Hangzhou, Zhejiang, China</p>
+        <ul><li>Conducted interviews, shot videos, took part in writing and producing</li>
+        <li>Produced video packages for the TV News Program which is No.2 in the country</li>
+        </ul>
+        <h3>Student Newsroom Reporter</h3>
+        <p><time>Aug 2013-May 2014</time></p>
+        <p>NewsVision<p>
+        <p><span><a href="http://umtv.miami.edu">University of Miami TV</a></span></p>
+        <p>Coral Gables, Florida</p>
         <ul><li>News reporter doing audio, video, writing and production.</li></ul>
-        <p><strong>Sep. 2010---June 2013</strong> “Cultural Vibration”, Taiyuan, Shanxi, China</p>
-        <ul><li>Editor of the monthly campus newspaper.</li></ul>
-        <p><strong>July. 2012--- Sep. 2012</strong> “Luqiao Daily”, Taizhou City, Zhejiang Province, China</p>
-        <ul><li>Intern assistant reporter and editor, responsible for draft editing and interviewing.</li></ul>
-        <p><strong>July 2011--- Aug. 2011</strong> “Qianjiang Evening News”, Zhejiang Province, China</p>
+        <h3>Newspaper Reporter Intern</h3>
+        <p><time>July 2012-Sep 2012</time></p>
+        <p><span><a href="http://paper.lqnews.cn/html/2014-11/13/node_1.htm">Luqiao Daily</a></span></p>
+        <p>Taizhou, Zhejiang, China</p>
+        <ul><li>Assistanted reporter and editor, responsible for draft editing and interviewing.</li></ul>
+        <h3>Newspaper Editor</h3>
+        <p><time>Sep 2010-June 2013</time></p>
+        <p>Cultural Vibration</p>
+        <p>Taiyuan, Shanxi, China</p>
+        <ul><li>Editor-in-chief of the monthly campus newspaper</li></ul>
+        <h3>Newspaper Reporter Intern</h3>
+        <p><time>July 2011-Aug 2011</time></p>
+        <p><span><a href="http://www.qjwb.com.cn/">Qianjiang Evening News</a></span></p>
+        <p>Hangzhou, Zhejiang, China </p>
         <ul><li>Intern reporter at local news department</li>
           <li>Responsible for a column concerning daily life of local people.</li></ul>
         </article>
       </section>
 
 
-      <section id="awards-and-activities">
-        <h2>Awards and Activities</h2>
+      <section id="proficiencies">
+        <h2>Proficiencies</h2>
         <article>
-          <p><strong>Sep. 2011---June 2012 Member of the university student council</strong></p>
-          <ul><li>Responsible for organizing annual world cultural festival</li>
-            <li>Invited local business leaders to hold employment seminars on campus</li></ul>
-            <p><strong>Sep. 2010---Jun. 2011 Member of the department level student union</strong></p>
-            <ul><li>Initiated literature club to tutor local middle school students</li></ul>
-           <p><strong>Second Class Scholarship</strong> for two academic semesters since 2009</p>
-             <p><strong>Third Class Scholarship</strong> for four academic semesters since 2009</p>
-             <p><strong>Outstanding Youth League Member</strong>	</p>
-             <p><strong>Second Place Award in Competitive Oration</strong> </p>
-           </article>
+          <h3>Videography:</h3> <p>Canon DSLRs, Panasonic HMC, Premiere Pro and Avid Media Composer</p>
+          <h3>Motion Design:</h3> <p>Autodesk Smoke, Autodesk Maya, Illustrator and Photoshop</p>
+          <h3>Web Interactive:</h3> <p>HTML, CSS</p>
+          <h3>Language:</h3> <p>Mandarin, English</p>
+        </article>
+      </section>
+
+        <section id="education">
+          <h2>Education</h2>
+          <article>
+            <h3>University of Miami</h3>
+            <time>Aug 2013-Present</time>
+            <p>Master’s degree in Journalism</p>
+          <h3>Shanxi University</h3>
+          <time>Sept 2009-July 2013</time>
+          <p>Bachelor’s degree in Chinese Linguistics and Literature</p>
+          </article>
         </section>
 
+</div>
   </main>
 
-       <footer>
-         <p>&copy;2014. All Rights Reserved.</p>
-         </footer>
 
+<footer>
+  <p>&copy;2014. All Rights Reserved.</p>
+  </footer>
+
+     </div>
        </body>
 
       </html>
