--- a/resume.html
+++ b/resume.html
@@ -2,13 +2,25 @@
 <html>
 <head>
 <meta charset="UTF-8"/>
-<link href="css/web.css"rel="stylesheet"media="screen"/>
-<link href="css/print.css"rel="stylesheet"media="print"/>
+<meta name="viewport" content="width=device-width; initial-scale=1;" />
+<link href="css/web.css" rel="stylesheet" media="screen"/>
+<link href="css/mobile.css" rel="stylesheet" media="screen"/>
+<link href="css/print.css" rel="stylesheet" media="print"/>
+
 <title>HONG YING</title>
 </head>
 
 
 <body>
+
+  <nav>
+    <ul>
+      <li><a href="index.html">Hong Ying</a></li>
+      <li><a href="video.html">Video</a></li>
+      <li><a href="graphic.html">Graphic</a></li>
+    </ul>
+  </nav>
+
   <div id="box">
 
   <header>
@@ -19,16 +31,8 @@
     <br><strong>&#9993;</strong>Email:<a href="mailto:elaineying9106@gmail.com">elaineying9106@gmail.com</a>
     </address>
     <p><a href="https://www.linkedin.com/profile/view?id=288228069&trk=nav_responsive_tab_profile_pic">Hong Ying's Profile</a></p>
-    <img src="img/IMG_1054.JPG">
+    <img src="img/portrait.JPG">
   </header>
-
-  <div class="nav">
-  <ul>
-    <li><a href="#media-experience">Media Experience</a></li>
-    <li><a href="#proficiencies">Proficiencies</a></li>
-    <li><a href="#education">Education</a></li>
-  </ul>
-  </div>
 
 
   <main>
