--- a/resume.html
+++ b/resume.html
@@ -31,7 +31,7 @@
     <br><strong>&#9993;</strong>Email:<a href="mailto:elaineying9106@gmail.com">elaineying9106@gmail.com</a>
     </address>
     <p><a href="https://www.linkedin.com/profile/view?id=288228069&trk=nav_responsive_tab_profile_pic">Hong Ying's Profile</a></p>
-    <img src="img/portrait.JPG">
+    <img src="img/portrait.jpg">
   </header>
 
 
