--- a/resume.html
+++ b/resume.html
@@ -40,7 +40,7 @@
   <div id="content">
 
       <section id="media-experience">
-      <h2>Media Experience</h2>
+      <h2>No Media Experience</h2>
       <article>
         <h3>Broadcast Journalist Intern</h3>
         <p><time>May 2014-Aug 2014</time></p>
