--- a/resume.html
+++ b/resume.html
@@ -31,7 +31,7 @@
     <br><strong>&#9993;</strong>Email:<a href="mailto:elaineying9106@gmail.com">elaineying9106@gmail.com</a>
     </address>
     <p><a href="https://www.linkedin.com/profile/view?id=288228069&trk=nav_responsive_tab_profile_pic">Hong Ying's Profile</a></p>
-    <img src="img/portrait.jpg">
+    <img src="img/portrait.JPG">
   </header>
 
 
@@ -40,7 +40,7 @@
   <div id="content">
 
       <section id="media-experience">
-      <h2>No Media Experience</h2>
+      <h2>Media Experience</h2>
       <article>
         <h3>Broadcast Journalist Intern</h3>
         <p><time>May 2014-Aug 2014</time></p>
