--- a/DP/index.html
+++ b/DP/index.html
@@ -38,7 +38,7 @@
 
 <section class="cd-section">
     <p>
-      With the industrialization  of China, many traditional crafts and arts are disappearing. These are three.
+      As China becomes more industralized, many traditional crafts and arts are disappearing. These are three.
     </p>
 </section>
 
@@ -101,15 +101,19 @@
 <div class="cd-modal">
   <div class="cd-modal-content">
     <p>
-      1Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad modi repellendus, optio eveniet eligendi molestiae? Fugiat, temporibus! A rerum pariatur neque laborum earum, illum voluptatibus eum voluptatem fugiat, porro animi tempora? Sit harum nulla, nesciunt molestias, iusto aliquam aperiam est qui possimus reprehenderit ipsam ea aut assumenda inventore iste! Animi quaerat facere repudiandae earum quisquam accusamus tempora, delectus nesciunt, provident quae aliquam, voluptatum beatae quis similique in maiores repellat eligendi voluptas veniam optio illum vero! Eius, dignissimos esse eligendi veniam.
-    </p>
-
+  Hong Ying is a multimedia storyteller with international reporting experience.
+   </p>
     <p>
-      2
+    Hong’s specialties include video documentary field work and productions, photography, on-camera reporting, infographic design,writing and web design.
     </p>
-
     <p>
-      3
+    Hong Ying traveled to Taizhou (Zhejiang, China) during the summer of 2014 and the Spring of 2015 to cover three disappearing Chinese traditional crafts and arts (boneless flower lantern,lime carving and Yue Opera). Those traditions enjoy fairly long histories. With the industrialization in China, they are facing great problem of passing on to the next generation. Hong Ying produced a series of documentaries and designed a webpage for the project.
+    </p>
+    <p>
+    She worked as a journalist intern at Zhejiang Radio and TV Center in the summer of 2014. She traveled the country to report major news for the program One Degree Deeper, which ranks #2 in the country. She designed infographics for Univision during the 2014 Midterm Election. She also created original broadcast video packages for University of Miami TV in 2013.
+    </p>
+    <p>
+    She studied Chinese Linguistics and Literature in Shanxi University before going to the University of Miami for Multimedia Journalism and found her love with visual storytelling.
     </p>
   </div> <!-- cd-modal-content -->
 </div> <!-- cd-modal -->
