--- a/DP/index.html
+++ b/DP/index.html
@@ -110,7 +110,7 @@
     Hong Ying traveled to Taizhou (Zhejiang, China) during the summer of 2014 and the Spring of 2015 to cover three disappearing Chinese traditional crafts and arts (boneless flower lantern,lime carving and Yue Opera). Those traditions enjoy fairly long histories. With the industrialization in China, they are facing great problem of passing on to the next generation. Hong Ying produced a series of documentaries and designed a webpage for the project.
     </p>
     <p>
-    She worked as a journalist intern at Zhejiang Radio and TV Center in the summer of 2014. She traveled the country to report major news for the program One Degree Deeper, which ranks #2 in the country. She designed infographics for Univision during the 2014 Midterm Election. She also created original broadcast video packages for University of Miami TV in 2013.
+    She worked as a journalist intern at Zhejiang Radio and TV Center in the summer of 2014. She traveled the country to cover major news for the program One Degree Deeper, which ranks #2 in the country. She designed infographics for Univision during the 2014 Midterm Election. She also created original broadcast video packages for University of Miami TV in 2013.
     </p>
     <p>
     She studied Chinese Linguistics and Literature in Shanxi University before going to the University of Miami for Multimedia Journalism and found her love with visual storytelling.
