--- a/DP/index.html
+++ b/DP/index.html
@@ -101,20 +101,27 @@
 <div class="cd-modal">
   <div class="cd-modal-content">
     <p>
-  Hong Ying is a multimedia storyteller with international reporting experience.
-   </p>
+    ABOUT "DISAPPEARING TRADITIONS" </p>
     <p>
-    Hong’s specialties include video documentary field work and productions, photography, on-camera reporting, infographic design,writing and web design.
-    </p>
+    As China continues to blossom through industrialization, many of its time-honored crafts and arts are disappearing.
+</p>
     <p>
-    Hong Ying traveled to Taizhou (Zhejiang, China) during the summer of 2014 and the Spring of 2015 to cover three disappearing Chinese traditional crafts and arts (boneless flower lantern,lime carving and Yue Opera). Those traditions enjoy fairly long histories. With the industrialization in China, they are facing great problem of passing on to the next generation. Hong Ying produced a series of documentaries and designed a webpage for the project.
-    </p>
+    Traditions such as flower lanterns, lime carving and the Yue Opera enjoy long histories, yet they face a great problem in finding caretakers among the next generation.
+  </p>
     <p>
-    She worked as a journalist intern at Zhejiang Radio and TV Center in the summer of 2014. She traveled the country to cover major news for the program One Degree Deeper, which ranks #2 in the country. She designed infographics for Univision during the 2014 Midterm Election. She also created original broadcast video packages for University of Miami TV in 2013.
-    </p>
+    Hong Ying, a multimedia journalist, travelled to Zhejiang, China to document these cultural treasures and the struggle China's older generation faces in keeping them alive.
+</p>
     <p>
-    She studied Chinese Linguistics and Literature in Shanxi University before going to the University of Miami for Multimedia Journalism and found her love with visual storytelling.
-    </p>
+    ABOUT HONG YING  </p>
+    <p>
+    Hong Ying is a multimedia storyteller with international reporting experience.
+  </p>
+ <p>Her specialties include video documentary field work and production, photography, on-camera reporting, infographic design, writing and web design.
+</p>
+<p> Hong previously worked as a journalist at Zhejiang Radio and TV Center in 2014, traveling across China for the program One Degree Deeper. Other experiences include designing infographics for Univision for the 2014 Midterm Election and creating original video packages for UMTV.
+ </p>
+ <p>Prior to attending the University of Miami to pursue a Master's degree focusing on Multimedia Journalism, Hong studied Chinese Linguistics and Literature at Shanxi University in Taiyuan, China.
+</p>
   </div> <!-- cd-modal-content -->
 </div> <!-- cd-modal -->
 
